--- a/css/styles.css
+++ b/css/styles.css
@@ -1271,7 +1271,7 @@ img[src*="3d_breakdown.png"] {
 /* Universe Series container styling to match others - Fixed height issue */
 .universe-series .stock-item {
   width: 300px;
-  min-height: 480px; /* Increased from 450px to accommodate the View More button */
+  min-height: 480px; /* Increased from 450px to accommodate the button */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -1297,7 +1297,6 @@ img[src*="3d_breakdown.png"] {
 }
 
 .universe-series .stock-item .view-more-btn {
-  margin-top: 15px; /* Added margin to ensure button has space */
-  position: relative; /* Ensure proper positioning */
-  bottom: 0; /* Align to bottom of container */
+  margin-top: 15px; /* Added margin to ensure button is not cut off */
+  display: inline-block;
 }
